# szfit-app

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml  szfit-app.code-workspace
.cargo/: config.toml.template
libs/szfit-auth/: Cargo.toml
libs/szfit-domain/: Cargo.toml
libs/szfit-domain/src/: lib.rs
libs/szfit-domain/src/aggregate/: jwt.rs  mod.rs  sets.rs  workout_plan.rs
libs/szfit-domain/src/entity/: exercise.rs  mod.rs  sets.rs  training.rs  user.rs  workout.rs
libs/szfit-domain/src/jwt_auth/: claims.rs  error.rs  jwt_coder.rs  jwt_generator.rs  jwt_validator.rs  mod.rs
libs/szfit-domain/src/repositories/: error.rs  mod.rs
libs/szfit-domain/src/repositories/exercise_repo/: exercise_repository.rs  mod.rs
libs/szfit-domain/src/repositories/sets_repo/: mod.rs  sets_repository.rs
libs/szfit-domain/src/repositories/training_repo/: mod.rs  training_repository.rs
libs/szfit-domain/src/repositories/user_repo/: mod.rs  user_repository.rs
libs/szfit-domain/src/repositories/workout_plan_repo/: mod.rs  workout_plan_repository.rs
libs/szfit-domain/src/repositories/workout_plan_repo/implementation/: mod.rs
libs/szfit-domain/src/services/: auth.rs  error.rs  jwt_authenticator.rs  jwt_service.rs  mod.rs  training_service.rs
libs/szfit-domain/src/services/auth_service/: auth_service.rs  mod.rs
libs/szfit-domain/src/services/auth_service/implementation/: mod.rs  telegram_auth_service.rs
libs/szfit-domain/src/services/jwt_service/: auth_claims.rs  jwt_authenticator.rs  jwt_service.rs  mod.rs
libs/szfit-domain/src/services/jwt_service/implementation/: jwt_authenticator.rs  jwt_service.rs  mod.rs
libs/szfit-domain/src/services/training_service/: mod.rs  training_service.rs
libs/szfit-domain/src/services/training_service/implementation/: mod.rs  training_service.rs  training_service_test.rs
libs/szfit-domain/src/services/workout_list_service/: mod.rs  workout_list_service.rs
libs/szfit-domain/src/services/workout_plan_service/: mod.rs  workout_plan_service.rs
libs/szfit-domain/src/store/: mod.rs
libs/szfit-domain/src/store/db/: mod.rs  postgres.rs  sqlite.rs
libs/szfit-domain/src/usecases/: mod.rs  workout_usecase.rs
services/telegram-bot/: Cargo.toml
services/telegram-bot/src/: lib.rs  telegram_command.rs
services/telegram-bot/src/sender/: error.rs  mod.rs
services/telegram-bot/src/state/: mod.rs
services/telegram-bot/src/telegram_handlers/: callback_handler.rs  command_handler.rs  error.rs  message_handler.rs  mod.rs
services/telegram-bot/src/telegram_handlers/handlers/: callback_handler.rs  exercise_in_progress.rs  exercise_list.rs  mod.rs  workout_in_progress.rs  workout_list_handler.rs
services/telegram-bot/src/views/: exercise_progress_view.rs  mod.rs  workout_list_view.rs  workout_plan_view.rs  workout_progress_view.rs
services/web/: Cargo.toml
services/web/src/: app_response.rs  lib.rs
services/web/src/auth/: mod.rs  telegram_auth_controller.rs
services/web/src/auth/jwt/: mod.rs
services/web/src/exercise/: exercise_dto.rs  exercise_handlers.rs  mod.rs
services/web/src/exercise/controllers/: exercise_controller.rs  mod.rs
services/web/src/exercise/handlers/: create.rs  list.rs
services/web/src/middlewaries/: auth.rs
services/web/src/workout_edit/: mod.rs  workout_dto.rs  workout_edit.rs
services/web/src/workout_edit/controllers/: mod.rs  workout_plan_controller.rs
services/web/src/workout_edit/handlers/: mod.rs
services/web/src/workout_list/: mod.rs  workout_dto.rs  workout_list.rs
services/web/src/workout_list/controllers/: mod.rs  test_workout_controller.rs  workout_controller.rs
services/web/src/workout_list/handlers/: create_workout.rs  delete_workout.rs  mod.rs  update_workout.rs  workout_list.rs
szfit-app-bin/: Cargo.toml
szfit-app-bin/src/: main.rs
(+53 files in other folders)
