[package]
name = "szfit-app-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# homebrew craft
telegram_bot={ path = "../services/telegram-bot" }
web={ path = "../services/web" }
szfit-domain={ path = "../libs/szfit-domain"}

# log
pretty_env_logger = { version = "0.5.0"}
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = { version = "0.4.21" }

# async
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros"] }
