[package]
name = "szfit-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
#homebrew craft
szfit-db = { path = "../../libs/szfit-db" }
szfit-utils = { path = "../../libs/szfit-utils" }
szfit-macro = { path = "../../libs/szfit-macro" }

async-trait = { version = "0.1.80" }

sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlx-postgres", "time", "chrono"] }

# basic stuff
log = { version = "0.4.21" }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0.61"
derive_more = { version = "1.0.0-beta", features = ["from", "display"] }

# di
dill = { version = "0.8.0" }
chrono = "0.4.38"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }

#jwt stuff
jsonwebtoken = "9.2.0"
serde_json = "1.0.117"

# log
pretty_env_logger = { version = "0.5.0"}

[dev-dependencies]
mockall = "0.13.1"

[features]
test-repos-postgres=[]